--- a/buf.yaml
+++ b/buf.yaml
@@ -1,11 +1,9 @@
 version: v2
 modules:
-  - path: .
+  - path: proto
 lint:
   use:
     - STANDARD
 breaking:
   use:
     - FILE
-deps:
-  - buf.build/googleapis/googleapis
